# oyranos-oiio

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  README  README.md  iccjpeg.c  iccjpeg.h  jpegmarkers.c  jpegmarkers.h  oyranos_cmm_oiio.cpp
cmake/modules/: FindOIIO.cmake
extras/: CMakeLists.txt  oyranos-oiio.spec.in
po/: cs.po  de.po  eo.po  eu.po  fr.po  oyranos-oiio.pot
